# OpinionMining

./: README.md  main.py  makeData_standard.py  pyproject.toml
api/: Dockerfile  pyproject.toml  requirements.txt
api/fast_api/: main.py
