[tool.poetry]
name = "opinion-mining-api"
version = "0.1.0"
description = ""
authors = ["Efraim Berkovič <efraim@lingea.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "*"}
uvicorn = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
